C_Projects/Neural/Code/utils.h

//////////////////////////////////////////////////// Data Structures //////////////////////////////////////////////////////////////

/*
Matrix data structure 
holds dimensional data
holds data as a pointer to a 1d double array
*/
typedef struct {
    double* data;
    int dim1;
    int dim2;
} matrix;
/*
Optimization function enum structure
Enum to store what optimization function to use.
*/
typedef enum {
    SGD,
    SGD_MOMENTUM,
    ADA_GRAD,
    RMS_PROP,
    ADAM
}OptimizationType;
//////////////////////////////////////////////////// Linear Algebra Methods //////////////////////////////////////////////////////////////

/*
Returns a matrix object. Allocates memory on the heap for the object.
Transposes w, swaps dimension indicators in the matrix object.
*/
matrix* transpose_matrix(matrix* w);
 

/*
Prints a matrix object. Dimensional information required to print is included in the object.
*/
void print_matrix(matrix* M);
/*
Returns a matrix object. Allocates memory on the heap for the object.
Takes the matrix product of w x v. Order matters.
Includes dimensionality checks.
*/
matrix* matrix_mult(matrix* w, matrix* v);