MiniNet/python/nn_bindings.py


# Dense Layer Calculate Bias Gradients
libnn.calculate_bias_gradients.argtypes = [
    ctypes.POINTER(matrix), # Input Gradient Pointer 
    ctypes.POINTER(LayerDense) # Dense Layer
]
libnn.calculate_bias_gradients.restype = None # Retuns Void


# Dense Apply Regularization Gradients
libnn.apply_regularization_gradients.argtypes = [
    ctypes.POINTER(LayerDense) # Dense Layer
]
libnn.apply_regularization_gradients.restype = None # Retuns Void


# Dense Apply Dropout Gradients
libnn.apply_dropout_gradients.argtypes = [
    ctypes.POINTER(LayerDense) # Dense Layer
]
libnn.apply_dropout_gradients.restype = None # Retuns Void


# Dense Layer Update Parameters SGD
libnn.update_params_sgd.argtypes = [
    ctypes.POINTER(LayerDense), # Dense Layer
    ctypes.POINTER(ctypes.c_double), # Network Learning Rate
    ctypes.c_int, # Network current epoch
    ctypes.c_double, # Learning Rate Decay
]
libnn.update_params_sgd.restype = None # Retuns Void


# Dense Layer Update Parameters SGD Momentum
libnn.update_params_sgd_momentum.argtypes = [
    ctypes.POINTER(LayerDense), # Dense Layer
    ctypes.POINTER(ctypes.c_double), # Network Learning Rate
    ctypes.c_int, # Network current epoch
    ctypes.c_double, # Learning Rate Decay
    ctypes.c_double # Beta 1
]
libnn.update_params_sgd_momentum.restype = None # Retuns Void


# Dense Layer Update Parameters ADAGRAD
libnn.update_params_adagrad.argtypes = [
    ctypes.POINTER(LayerDense), # Dense Layer
    ctypes.POINTER(ctypes.c_double), # Network Learning Rate
    ctypes.c_double, # Learning Rate Decay
    ctypes.c_double # Epsilon 
]
libnn.update_params_adagrad.restype = None # Retuns Void


# Dense Layer Update Parameters RMSPROP
libnn.update_params_rmsprop.argtypes = [
    ctypes.POINTER(LayerDense), # Dense Layer
    ctypes.POINTER(ctypes.c_double), # Network Learning Rate
    ctypes.c_double, # Learning Rate Decay
    ctypes.c_double # Epsilon 
]
libnn.update_params_rmsprop.restype = None # Retuns Void


# Dense Layer Update Parameters ADAM
libnn.update_params_adam.argtypes = [
    ctypes.POINTER(LayerDense), # Dense Layer
    ctypes.POINTER(ctypes.c_double), # Network Learning Rate
    ctypes.c_double, # Learning Rate Decay
    ctypes.c_double, # Beta 1
    ctypes.c_double, # Beta 2
    ctypes.c_double, # Epsilon 
    ctypes.c_int, # Current epoch
    ctypes.c_bool # UseBiasCorrection
]
libnn.update_params_adam.restype = None # Retuns Void


# Dense Layer Optimization Dense
libnn.optimization_dense.argtypes = [
    ctypes.POINTER(LayerDense), # Dense Layer
    ctypes.POINTER(ctypes.c_double), # Network Learning Rate
    ctypes.c_double, # Learning Rate Decay
    ctypes.c_int, # Current epoch
    ctypes.c_double, # Beta 1
    ctypes.c_double, # Beta 2
    ctypes.c_double, # Epsilon 
    ctypes.c_bool # UseBiasCorrection
]
libnn.optimization_dense.restype = None # Retuns Void


######################################################### UTIL METHODS #############################################################

# Util Methods Transpose Matrix
libnn.transpose_matrix.argtypes = [
    ctypes.POINTER(matrix) # Matrix w
]
libnn.transpose_matrix.restype = ctypes.POINTER(matrix) # Returns pointer to a matrix


# Util Methods Print Matrix
libnn.print_matrix.argtypes = [
    ctypes.POINTER(matrix) # Matrix w
]
libnn.print_matrix.restype = None # Returns Void


# Util Methods Matrix Multiplication
libnn.matrix_mult.argtypes = [
    ctypes.POINTER(matrix), # Matrix w
    ctypes.POINTER(matrix)  # Matrix v
]
libnn.matrix_mult.restype = ctypes.POINTER(matrix) # Returns pointer to a matrix


# Util Methods Element Wise Matrix Multiplication
libnn.element_matrix_mult.argtypes = [
    ctypes.POINTER(matrix), # Matrix w
    ctypes.POINTER(matrix)  # Matrix v
]
libnn.element_matrix_mult.restype = ctypes.POINTER(matrix) # Returns pointer to a matrix


# Util Methods Vector Dot Product
libnn.vector_dot_product.argtypes = [
    ctypes.POINTER(matrix), # Matrix w
    ctypes.POINTER(matrix)  # Matrix v
]
libnn.vector_dot_product.restype = ctypes.c_double # Returns dot product (double)


# Util Methods Matrix Scalar Multiplication
libnn.matrix_scalar_mult.argtypes = [
    ctypes.POINTER(matrix), # Matrix w
    ctypes.c_double # Scalar S
]
libnn.matrix_scalar_mult.restype = None # Returns Void
